changed text size

--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "next": "12.1.5",
     "react": "18.0.0",
     "react-dom": "18.0.0",
-    "react-tsparticles": "^2.0.6"
+    "react-tsparticles": "^2.0.6",
+    "tsparticles": "^2.0.6",
+    "tsparticles-shape-circle": "^2.0.6"
   },
   "devDependencies": {
     "eslint": "8.13.0",
