--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "next": "12.1.5",
     "react": "18.0.0",
     "react-dom": "18.0.0",
+    "react-icons": "^4.3.1",
     "react-tsparticles": "^2.0.6",
+    "react-typewriter-effect": "^1.1.0",
     "tsparticles": "^2.0.6",
-    "tsparticles-shape-circle": "^2.0.6"
+    "tsparticles-shape-circle": "^2.0.6",
+    "typewriter-effect": "^2.18.2"
   },
   "devDependencies": {
     "eslint": "8.13.0",
