--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-icons": "^4.3.1",
     "react-tsparticles": "^2.0.6",
     "react-typewriter-effect": "^1.1.0",
+    "styled-components": "^5.3.5",
     "tsparticles": "^2.0.6",
     "tsparticles-shape-circle": "^2.0.6",
     "typewriter-effect": "^2.18.2"
